--- a/app/web/template/check_your_lpa.gohtml
+++ b/app/web/template/check_your_lpa.gohtml
@@ -44,7 +44,7 @@
             {{ tr .App "whoAreTheAttorneys" }}
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ concatSentence .Lpa.AttorneyNames }}
+            {{ concatSentence .Lpa.AttorneysFullNames }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="{{ link .App "/choose-attorneys" }}">
@@ -183,77 +183,7 @@
         {{ tr .App "attorneys" }}
       </h3>
 
-      <dl class="govuk-summary-list">
-
-        {{range $i, $a := .Lpa.Attorneys}}
-          {{ $detailsLink := print "/choose-attorneys?from=check&id=" $a.ID }}
-          {{ $addressLink := print "/choose-attorneys-address?from=check&id=" $a.ID }}
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              {{ tr $.App "name" }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{ $a.FirstNames }} {{ $a.LastName }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="{{ link $.App $detailsLink }}">
-                {{ tr $.App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr $.App "name") }}</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              {{ tr $.App "dateOfBirth" }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{ formatDate $a.DateOfBirth }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="{{ link $.App $detailsLink }}">
-                {{ tr $.App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr $.App "dateOfBirth") }}</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              {{ tr $.App "email" }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{ $a.Email }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="{{ link $.App $detailsLink }}">
-                {{ tr $.App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr $.App "email") }}</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              {{ tr $.App "address" }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <div>{{ $a.Address.Line1 }}</div>
-              <div>{{ $a.Address.Line2 }}</div>
-              <div>{{ $a.Address.Line3 }}</div>
-              <div>{{ $a.Address.TownOrCity }}</div>
-              <div>{{ $a.Address.Postcode }}</div>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="{{ link $.App $addressLink }}">
-                {{ tr $.App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr $.App "address") }}</span>
-              </a>
-            </dd>
-          </div>
-
-          <hr class="govuk-section-break govuk-section-break--m">
-
-        {{end}}
-
-      </dl>
+      {{ template "attorney-details" (attorneyDetails .Lpa.Attorneys "check" .App) }}
 
       <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
         {{ tr .App "replacementAttorney" }}
