--- a/app/web/template/read_your_lpa.gohtml
+++ b/app/web/template/read_your_lpa.gohtml
@@ -46,10 +46,10 @@
             {{ tr .App "whoAreTheAttorneys" }}
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ .Lpa.Attorney.FirstNames }} {{ .Lpa.Attorney.LastName }}
+            {{ concatSentence .Lpa.AttorneysFullNames }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/choose-attorneys" }}">
+            <a class="govuk-link" href="{{ link .App "/choose-attorneys-summary" }}">
               {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "yourAttorneys" }}</span>
             </a>
           </dd>
@@ -154,66 +154,8 @@
         {{ tr .App "attorneys" }}
       </h3>
 
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "name" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.Attorney.FirstNames }} {{ .Lpa.Attorney.LastName }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/choose-attorneys" }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "name") }}</span>
-            </a>
-          </dd>
-        </div>
 
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "dateOfBirth" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ formatDate .Lpa.Attorney.DateOfBirth }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/choose-attorneys" }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "dateOfBirth") }}</span>
-            </a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "email" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            {{ .Lpa.Attorney.Email }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/choose-attorneys" }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "email") }}</span>
-            </a>
-          </dd>
-        </div>
-
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            {{ tr .App "address" }}
-          </dt>
-          <dd class="govuk-summary-list__value">
-            <div>{{ .Lpa.Attorney.Address.Line1 }}</div>
-            <div>{{ .Lpa.Attorney.Address.Line2 }}</div>
-            <div>{{ .Lpa.Attorney.Address.TownOrCity }}</div>
-            <div>{{ .Lpa.Attorney.Address.Postcode }}</div>
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/choose-attorneys-address" }}">
-              {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "address") }}</span>
-            </a>
-          </dd>
-        </div>
-      </dl>
+      {{ template "attorney-details" (attorneyDetails .Lpa.Attorneys "read" .App) }}
 
       <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
         {{ tr .App "replacementAttorney" }}
