--- a/app/web/template/what_happens_when_signing.gohtml
+++ b/app/web/template/what_happens_when_signing.gohtml
@@ -5,15 +5,13 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">{{ tr .App "whatHappensWhenSigning" }}</h1>
 
-      {{ $allAttorneysFirstNames := concatSentence .Lpa.AttorneysFirstNames }}
-      {{ $allAttorneysFullNames := concatSentence .Lpa.AttorneysFullNames }}
-      {{ trFormatHtml .App "whatHappensWhenSigningContent" "AllAttorneysFullNames" .Lpa.AttorneysFullNames "AllAttorneysFirstNames" $allAttorneysFirstNames }}
+      {{ trFormatHtml .App "whatHappensWhenSigningContent" "AllAttorneysFullNames" .Lpa.AttorneysFullNames "AllAttorneysFirstNames" .Lpa.AttorneysFullNames }}
 
       <div class="govuk-warning-text">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
           <span class="govuk-warning-text__assistive"></span>
-          {{ trFormat .App "whileYouHaveMentalCapacity" "AllAttorneysFirstNames" $allAttorneysFirstNames }}
+          {{ trFormat .App "whileYouHaveMentalCapacity" "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames }}
         </strong>
       </div>
 
@@ -23,7 +21,7 @@
 
       <h2 class="govuk-heading-m">{{ tr .App "registeringYourLpa" }}</h2>
 
-      {{ trFormatHtml .App "registeringYourLpaContent" "AllAttorneysFullNames" $allAttorneysFullNames "CertificateProviderFirstNames" .Lpa.CertificateProvider.FirstNames }}
+      {{ trFormatHtml .App "registeringYourLpaContent" "AllAttorneysFullNames" .Lpa.AttorneysFullNames "CertificateProviderFirstNames" .Lpa.CertificateProvider.FirstNames }}
 
       <a class="govuk-button" href="{{ link .App .Continue }}">{{ tr .App "continue" }}</a>
     </div>
