prefer passing .App.Path rather than matching on strings for redirect paths

--- a/app/web/template/choose_attorneys_summary.gohtml
+++ b/app/web/template/choose_attorneys_summary.gohtml
@@ -11,13 +11,13 @@
                 <dt class="govuk-summary-list__key">
                     {{ .FirstNames }} {{ .LastName }}<br>
                     <span class="govuk-body-s">{{ formatDate .DateOfBirth }}</span><br>
-                    <a class="govuk-link govuk-body-s" href="{{ $.AttorneyDetailsPath }}?id={{ .ID }}&from=summary">
+                    <a class="govuk-link govuk-body-s" href="{{ $.AttorneyDetailsPath }}?id={{ .ID }}&from={{ .App.Page }}">
                         {{ trFormatHtml $.App "changeDetailsLink" "FirstNames" .FirstNames "LastName" .LastName }}
                     </a>
                 </dt>
                 <dd class="govuk-summary-list__value">
                     {{ .Address.Line1 }}, {{ .Address.Postcode }}<br>
-                    <a class="govuk-link govuk-body-s" href="{{ $.AttorneyAddressPath }}?id={{ .ID }}&from=summary">
+                    <a class="govuk-link govuk-body-s" href="{{ $.AttorneyAddressPath }}?id={{ .ID }}&from={{ .App.Page }}">
                         {{ trFormatHtml $.App "changeAddressLink" "FirstNames" .FirstNames "LastName" .LastName }}
                     </a>
                 </dd>
