--- a/app/web/template/choose_attorneys_address.gohtml
+++ b/app/web/template/choose_attorneys_address.gohtml
@@ -38,7 +38,7 @@
               </div>
 
               <p class="govuk-body">
-                <a href="?action=manual" class="govuk-link govuk-link--no-visited-state">
+                <a href="?action=manual&id={{ .Attorney.ID }}" class="govuk-link govuk-link--no-visited-state">
                   {{ tr .App "cantFindAddress" }}
                 </a>
               </p>
