add conditional text area

--- a/app/web/template/how_should_attorneys_make_decisions.gohtml
+++ b/app/web/template/how_should_attorneys_make_decisions.gohtml
@@ -31,7 +31,7 @@
                         {{ template "radios" (items . "decision-type" ""
                         (item "jointly-and-severally" "jointlyAndSeverally" "hint" "jointlyAndSeverallyHint")
                         (item "jointly" "jointly" "hint" "jointlyHint")
-                        (item "mixed" "jointlyAndSeverallyMixed" "hint" "jointlyAndSeverallyMixedHint")
+                        (item "mixed" "jointlyAndSeverallyMixed" "hint" "jointlyAndSeverallyMixedHint" "conditionalLabel" "details")
                         ) }}
                     </div>
                 </div>
