update check your LPA with how attorneys should act

--- a/app/web/template/check_your_lpa.gohtml
+++ b/app/web/template/check_your_lpa.gohtml
@@ -33,7 +33,7 @@
             {{ .Lpa.WhenCanTheLpaBeUsed }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/when-can-the-lpa-be-used" }}">
+            <a class="govuk-link" href="{{ link .App .WhenCanLpaBeUsedPath }}">
               {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "whenTheLpaCanBeUsed" }}</span>
             </a>
           </dd>
@@ -47,7 +47,7 @@
             {{ .Lpa.AttorneysFullNames }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/choose-attorneys" }}">
+            <a class="govuk-link" href="{{ link .App .ChooseAttorneysPath }}">
               {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "yourAttorneys" }}</span>
             </a>
           </dd>
@@ -58,10 +58,10 @@
             {{ tr .App "howTheAttorneysMustWorkTogether" }}
           </dt>
           <dd class="govuk-summary-list__value">
-            We haven't done this bit yet
+            {{ .Lpa.DecisionsType }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">
+            <a class="govuk-link" href="{{ link .App .HowAttorneysMakeDecisionsPath }}">
               {{ tr .App "change" }}<span class="govuk-visually-hidden">  we haven't done this bit yet</span>
             </a>
           </dd>
@@ -89,7 +89,7 @@
             <p style="white-space: pre-line;">{{ .Lpa.Restrictions }}</p>
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/restrictions" }}">
+            <a class="govuk-link" href="{{ link .App .RestrictionsPath }}">
               {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "yourRestrictions" }}</span>
             </a>
           </dd>
@@ -158,7 +158,7 @@
             {{ .Lpa.CertificateProvider.FirstNames }} {{ .Lpa.CertificateProvider.LastName }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/certificate-provider-details" }}">
+            <a class="govuk-link" href="{{ link .App .CertificatesProviderPath }}">
               {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "certificateProvider") }}</span>
             </a>
           </dd>
@@ -172,7 +172,7 @@
             {{ .Lpa.CertificateProvider.Email }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ link .App "/certificate-provider-details" }}">
+            <a class="govuk-link" href="{{ link .App .CertificatesProviderPath }}">
               {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ tr .App "certificateProviderEmail" }}</span>
             </a>
           </dd>
