--- a/app/web/template/how_should_attorneys_make_decisions.gohtml
+++ b/app/web/template/how_should_attorneys_make_decisions.gohtml
@@ -20,16 +20,59 @@
                     <div class="govuk-form-group {{ if index .Errors "decision-type" }}govuk-form-group--error{{ end }}">
                         {{ template "error-message" (errorMessage . "decision-type") }}
 
-                        {{ template "radios" (items . "decision-type" .DecisionsType
-                        (item "jointly-and-severally" "jointlyAndSeverally" "hint" "jointlyAndSeverallyHint")
-                        (item "jointly" "jointly" "hint" "jointlyHint")
-                        (item "mixed" "jointlyAndSeverallyMixed" "hint" "jointlyAndSeverallyMixedHint" "conditionalLabel" "details" "conditionalValue" .DecisionsDetails "conditionalInputName" "mixed-details")
-                        ) }}
-                    </div>
-                </div>
+                        <div class="govuk-radios {{ if index .Errors "decision-type" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
+                            <div class="govuk-radios__item">
+                                <input class="govuk-radios__input" id="f-decision-type" name="decision-type" type="radio" value="jointly-and-severally" aria-describedby="decision-type-item-hint" {{ if eq "jointly-and-severally" .DecisionsType }}checked{{ end }}>
+                                <label class="govuk-label govuk-radios__label" for="f-decision-type">
+                                    {{ tr .App "jointlyAndSeverally" }}
+                                </label>
 
-                <div class="govuk-button-group">
-                    {{ template "continue-button" . }}
+                                <div id="decision-type-item-hint" class="govuk-hint govuk-radios__hint">
+                                    {{ tr .App "jointlyAndSeverallyHint" }}
+                                </div>
+                            </div>
+                            <div class="govuk-radios__item">
+                                <input class="govuk-radios__input" id="f-decision-type-2" name="decision-type" type="radio" value="jointly" aria-describedby="decision-type-2-item-hint" {{ if eq "jointly" .DecisionsType }}checked{{ end }}>
+                                <label class="govuk-label govuk-radios__label" for="f-decision-type-2">
+                                    {{ tr .App "jointly" }}
+                                </label>
+
+                                <div id="decision-type-2-item-hint" class="govuk-hint govuk-radios__hint">
+                                    {{ tr .App "jointlyHint" }}
+                                </div>
+                            </div>
+                            <div class="govuk-radios__item">
+                                <input class="govuk-radios__input" id="f-decision-type-3" name="decision-type" type="radio" value="mixed" aria-describedby="decision-type-3-item-hint" aria-controls="decision-type-3-conditional-div" {{ if or (eq "mixed" .DecisionsType) (index .Errors "mixed-details") }}checked{{ end }}>
+                                <label class="govuk-label govuk-radios__label" for="f-decision-type-3">
+                                    {{ tr .App "jointlyAndSeverallyMixed" }}
+                                </label>
+
+                                <div id="decision-type-3-item-hint" class="govuk-hint govuk-radios__hint">
+                                    {{ tr .App "jointlyAndSeverallyMixedHint" }}
+                                </div>
+
+                                <div class="govuk-radios__conditional" id="decision-type-3-conditional-div">
+                                    <div class="govuk-form-group {{ if index .Errors "mixed-details" }}govuk-form-group--error{{ end }}">
+                                        <p class="goveuk--body">{{ tr .App "decisionDetailsHint" }}</p>
+                                        <label class="govuk-label" for="mixed-details">
+                                            {{ tr .App "details" }}
+                                        </label>
+                                        {{ if index .Errors "mixed-details" }}
+                                            <p id="decision-type-3-error" class="govuk-error-message">
+                                                {{ tr .App (index .Errors "mixed-details") }}
+                                            </p>
+                                        {{ end }}
+
+                                        <textarea class="govuk-textarea {{ if index .Errors "mixed-details" }}govuk-input--error{{ end }}" id="mixed-details" name="mixed-details" rows="10">{{ .DecisionsDetails }}</textarea>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="govuk-button-group">
+                        {{ template "continue-button" . }}
+                    </div>
                 </div>
             </form>
         </div>
